fix: fix card wrapping

--- a/src/components/Main/components/NewsCardList/NewsCardList.css
+++ b/src/components/Main/components/NewsCardList/NewsCardList.css
@@ -18,6 +18,7 @@
 
 .news-card-list__cards-area {
   display: flex;
+  flex-wrap: wrap;
   gap: 16px;
   list-style: none;
   margin-top: 64px;
